--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.6.2"
+    "angular": "^1.6.2",
+    "bootstrap": "v4.0.0-alpha.6"
   }
 }
