--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
+    "gulp-count": "^0.3.0",
+    "gulp-imagemin": "^3.1.1",
     "gulp-inject": "^4.2.0",
     "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.1.0",
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
