--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
     "wiredep": "^4.0.0"
+  },
+  "dependencies": {
+    "mongoose": "^4.9.0"
   }
 }
