--- a/package.json
+++ b/package.json
@@ -26,6 +26,17 @@
     "wiredep": "^4.0.0"
   },
   "dependencies": {
-    "mongoose": "^4.9.0"
+    "body-parser": "^1.17.1",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.2",
+    "express-session": "^1.15.1",
+    "jade": "^1.11.0",
+    "mongoose": "^4.9.0",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0"
   }
 }
