--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Malhar Deshpande",
   "license": "ISC",
   "devDependencies": {
+    "connect": "^3.6.0",
+    "connect-livereload": "^0.6.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
@@ -23,6 +25,8 @@
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
+    "serve-index": "^1.8.0",
+    "serve-static": "^1.12.1",
     "wiredep": "^4.0.0"
   },
   "dependencies": {
